Improved the default thrust and added sound effects for jetpack